syntax = "proto3";

package test.common.secret.pkp;

message TestPrivateKeyMethodConfig {
  oneof key_type {
    string private_key_file = 1;
    string inline_private_key = 2;
  }
}
